--- a/index.html
+++ b/index.html
@@ -1,66 +1,123 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Full Motion by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
 	<head>
 		<title>KameTube</title>
-		<meta charset="utf-8" >
-		<meta name="description" content="誰でも気楽に投稿できる！" >
-		<meta name="author" content="KameTube Founders" >
-		<meta name="keywords" content="動画再生サイト Video Hosting Platform" >
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-		<style>
-			body {
-				background-color: GhostWhite;
-			}
-		</style>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
-		<header>
-		<h1>KameTube</h1>
-		<hr/><hr/>
-		<nav>
-			<table id="homeNav">
-				<thead>
-					<tr>
-						<th>
-						<form action="Upload.html">
-							<input type="submit" value="Upload" />
+	<body id="top">
+
+			<!-- Banner -->
+			<!--
+				To use a video as your background, set data-video to the name of your video without
+				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
+				formats to work correctly.
+			-->
+				<section id="banner" data-video="images/banner">
+					<div class="inner">
+						<header>
+							<h1>KameTube</h1>
+							<p>Upload your videos quickly and easily!<br />
+							designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
+						</header>
+						<form action="login.html">
+						<input type="submit" value="Login" />
 						</form>
-						</th>
-						<th>
-						<form action="Live.html">
-							<input type="submit" value="Live" />
-						</form>
-						</th>
-						<th>
-						<form action="CreateAccount.html">
-							<input type="submit" value="Create Account" />
-						</form>
-						</th>
-						<th>
-						<form action="Login.html">
-							<input type="submit" value="Login" />
-						</form>
-						</th>
-						<th>
-						<form action="MyPage.html">
-							<input type="submit" value="My Page" />
-						</form>
-						</th>
-					</tr>
-				</thead>
-			</table>
-			<th>Search <input type="text" /></th>	
-		</nav>
-		<hr/><hr/>
-		</header>
-		<main>
-			<article>
-				<section>
-				
+						<a href="#main" class="more">Learn More</a>
+					</div>
 				</section>
-		</main>
-		<footer>
-		
-		</footer>
+
+			<!-- Main -->
+				<div id="main">
+					<div class="inner">
+
+					<!-- Boxes -->
+						<div class="thumbnails">
+
+							<div class="box">
+								<a href="https://youtu.be/f4D0lY6A3nU" class="image fit"><img src="http://img.youtube.com/vi/f4D0lY6A3nU/mqdefault.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>TK Ling Tosite Sigure - Katharsis</h3>
+									<p>TK Ling Tosite Sigure - Katharsis</p>
+									<a href="https://youtu.be/f4D0lY6A3nU" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/NQP89ish9t8" class="image fit"><img src="http://img.youtube.com/vi/NQP89ish9t8/mqdefault.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>How to Put a Website Online: Template, Coding, Domain, Hosting, and DNS</h3>
+									<p>Learn how to get your website online with a custom URL and website hosting. Presented by: freeCodeCamp.org.</p>
+									<a href="https://youtu.be/NQP89ish9t8" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+							<div class="box">
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<div class="inner">
+									<h3>Nascetur nunc varius commodo</h3>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+								</div>
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:madbkaz@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
+					</div>
+				</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
