--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<p>Upload your videos quickly and easily!<br />
 							designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
 						</header>
-						<form action="login.html">
+						<form action="src/login.html">
 						<input type="submit" value="Login" />
 						</form>
 						<a href="#main" class="more">Learn More</a>
