Edit login file
Fixed form link back to main page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
 						</header>
 						<form action="src/login.html">
-						<input type="submit" value="Login To Your Account" />
+						<input type="submit" value="Login" />
 						</form>
 						<a href="#main" class="more">Learn More</a>
 					</div>
