--- a/src/login.html
+++ b/src/login.html
@@ -33,7 +33,7 @@
 						<input type="submit" value="Login" />
 					</form>
 					<p><a href="CreateAccount.html">Create Account</a></p>
-					<p><a href="index.html">Home</a></p>
+					<p><a href="../index.html">Home</a></p>
 				</section>
 		</main>
 		<footer>
