--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 						<form action="src/login.html">
 						<input type="submit" value="Login" />
 						</form>
+						<form action="src/CreateAccount.html">
+						<input type="submit" value="Sign Up" />
+						</form>	
 						<a href="#main" class="more">Learn More</a>
 					</div>
 				</section>
@@ -104,6 +107,7 @@
 					<div class="inner">
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:madbkaz@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
